# cgm_format

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  USAGE.md  example_schema_usage.py  format_converter.py  format_processor.py  pyproject.toml  usage_example.py
.github/workflows/: test.yml
data/: .gitignore
data/comparison/: glucose_config_livia_reference.yaml  livia_reference.csv
data/input/: medtronics_test_livia.csv  nightscout-data-with-treatments.csv  nightscout_entries.csv  nightscout_entries.json  nightscout_profile.json  nightscout_treatments.csv  nightscout_treatments.json
docs/: NEW_SCHEMA.md  PHILOSOPHY.md  PIPELINE.md  UNIFIED_FORMAT.md  USAGE.md  modification_plan.md
examples/: example_cli_usage.py  example_schema_usage.py  usage_example.py
formats/: __init__.py  dexcom.py  libre.py  medtronic_WIP.py  unified.py
interface/: PIPELINE.md  __init__.py
scripts/: README.md  cgm_cli.py  scrub_synthetic_dexcom.py  scrub_synthetic_libre.py
src/cgm_format/: __init__.py  cgm_cli.py  format_converter.py  format_parser.py  format_processor.py  nightscout_downloader.py
src/cgm_format/formats/: UNIFIED_FORMAT.md  __init__.py  dexcom.json  dexcom.py  dexcom_eu.json  dexcom_eu.py  libre.json  libre.py  medtronic.py  medtronic_WIP.py  nightscout.py  supported.py  unified.json  unified.py
src/cgm_format/interface/: PIPELINE.md  __init__.py  cgm_interface.py  schema.py
tests/: README.md  __init__.py  conftest.py  test_cli_integration.py  test_format_converter.py  test_format_detection_validation.py  test_format_parser.py  test_format_processor.py  test_idempotency.py  test_integration_pipeline.py  test_livia_gdp_cgm_comparison.py  test_livia_reference_alignment.py  test_medtronic.py  test_nightscout.py  test_package_exports.py  test_roundtrip_datetime.py  test_schema.py  test_utils.py
tests/comparison/: __init__.py  livia_alignment.py
