[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cgm-format"
version = "0.3.5"
description = "Unified CGM data format converter for ML training and inference"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
dependencies = [
    "polars>=1.34.0",
]

[project.optional-dependencies]
extra = [
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "frictionless>=5.18.1",
]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cgm_format"]

[tool.hatch.build.targets.sdist]
exclude = [
    "data/",
    "data/**/*.csv",
    ".pytest_cache/",
    ".venv/",
    "*.egg-info/",
]
