[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cgm-format"
version = "0.7.2"
description = "Unified CGM data format converter for ML training and inference"
authors = [
    {name = "Newton Winter", email = "isoutthere@gmail.com"},
    {name = "Alex Karmazin", email = "karmazinalex@gmail.com"},
]
maintainers = [
    {name = "Alex Karmazin", email = "karmazinalex@gmail.com"},
    {name = "Anton Kulaga", email = "antonkulaga@gmail.com"},
    {name = "Newton Winter", email = "isoutthere@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "polars>=1.34.0",
]

[project.optional-dependencies]
extra = [
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "frictionless>=5.18.1",
]
cli = [
    "typer>=0.20.0",
    "rich>=13.0.0",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "frictionless>=5.18.1",
]
dev = [
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "frictionless>=5.18.1",
    "pytest>=8.0.0",
    "typer>=0.20.0",
    "rich>=13.0.0",
]

[project.scripts]
cgm-cli = "cgm_format.cgm_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cgm_format"]

[tool.hatch.build.targets.sdist]
exclude = [
    "data/",
    "data/**/*.csv",
    ".pytest_cache/",
    ".venv/",
    "*.egg-info/",
]
