[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cgm-format"
version = "0.8.1"
description = "Unified CGM data format converter for ML training and inference"
authors = [
    {name = "Newton Winter", email = "isoutthere@gmail.com"},
    {name = "Alex Karmazin", email = "karmazinalex@gmail.com"},
]
maintainers = [
    {name = "Alex Karmazin", email = "karmazinalex@gmail.com"},
    {name = "Anton Kulaga", email = "antonkulaga@gmail.com"},
    {name = "Newton Winter", email = "isoutthere@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "polars>=1.39.3",
]

[project.optional-dependencies]
cli = [
    "typer>=0.24.1",
    "rich>=14.3.3",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "frictionless>=5.18.1",
]
dev = [
    "cgm-format[cli]",
    "pytest>=8.0.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
cgm-cli = "cgm_format.cgm_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cgm_format"]

[tool.hatch.build.targets.sdist]
exclude = [
    "data/",
    "data/**/*.csv",
    ".pytest_cache/",
    ".venv/",
    "*.egg-info/",
]
